<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nf.co.projektyjava.memorymaster_v11.GameAreaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time"
            style="@style/TextView"
            android:background="#2196f3"
            android:gravity="center"
            android:text="@string/time"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/count_time"
            style="@style/TextView"
            android:background="#2196f3"
            android:gravity="center_vertical|start"
            android:text="@string/count_time"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score"
            style="@style/TextView"
            android:background="#1976d2"
            android:gravity="center"
            android:text="@string/score"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/count_score"
            style="@style/TextView"
            android:background="#1976d2"
            android:gravity="center_vertical|start"
            android:text="@string/count_score"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <TableRow
            android:id="@+id/row1"
            android:layout_weight="1"></TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_weight="1"></TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_weight="1"></TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_weight="1"></TableRow>

        <TableRow
            android:id="@+id/row5"
            android:layout_weight="1"></TableRow>

        <TableRow
            android:id="@+id/row6"
            android:layout_weight="1"></TableRow>

        <TableRow
            android:id="@+id/row7"
            android:layout_weight="1"></TableRow>

        <TableRow
            android:id="@+id/row8"
            android:layout_weight="1"></TableRow>

        <TableRow
            android:id="@+id/row9"
            android:layout_weight="1"></TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/attemp"
            style="@style/TextView"
            android:layout_weight="0.3"
            android:background="#1976d2"
            android:gravity="center"
            android:text="@string/attempt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/count_attempt"
            style="@style/TextView"
            android:layout_weight="0.10"
            android:background="#1976d2"
            android:gravity="center_vertical|start"
            android:text="@string/count_attempt"
            android:textStyle="bold" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="#2196f3"
            android:gravity="center"
            android:onClick="start"
            android:text="@string/start"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/streak"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="#1976d2"
            android:gravity="center"
            android:text="@string/streak"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/count_streak"
            style="@style/TextView"
            android:layout_weight="0.1"
            android:background="#1976d2"
            android:gravity="center_vertical|start"
            android:text="@string/count_attempt"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
